--- a/project/style.css
+++ b/project/style.css
@@ -8,15 +8,17 @@ body{
   --off-white: #FCFBF4;
 }
 .card {
-  width:24%;
+  width:50%;
   background-color: var(--off-white);
-  height: 225px;
+  height: 12%;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-basis: 22%;
   margin-bottom: 25px;
-
+  justify-content: space-between;
+  border-radius: 20px;
+  overflow:hidden
 }
 .flex-wrapper{
   display: flex;
@@ -25,4 +27,14 @@ body{
   align-items: center;
   width: 100vw;
   margin: 1rem, auto;
+}
+.card-img{
+ width: auto;
+ height: 70%;
+}
+.card:hover {
+  filter: drop-shadow(8px 8px 8px black);
+}
+.desc{
+  width: auto;
 }
