--- a/project/style.css
+++ b/project/style.css
@@ -5,7 +5,7 @@ body{
 :root{
   --dark-violete: #9989d9;
   --off-orange: #f7765f;
-  --off-white: #FCFBF4;
+  --off-white: #f8f5dd;
 }
 .card {
   width:50%;
@@ -15,9 +15,9 @@ body{
   flex-direction: column;
   align-items: center;
   flex-basis: 22%;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   justify-content: space-between;
-  border-radius: 20px;
+  border-radius: 75px;
   overflow:hidden
 }
 .flex-wrapper{
