--- a/project/style.css
+++ b/project/style.css
@@ -1,26 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Kenia&display=swap");
 body{
-  background-color: var(--off-orange);
+  background-color: var(--dark-violete);
   font-family: "Kenia", cursive;
 }
 
 :root{
-  --dark-violete: #9989d9;
+  --dark-violete: #2a2346;
   --off-orange: #f7765f;
-  --off-white: #f8f5dd;
+  --off-white: #d6d2b3;
+  --primary: var(--dark-violete);
 }
+.light{
+  --primary: var(--off-white);
+  --secondary: var(--off-orange);
+  --third: var(--dark-violete)
+}
+
+.dark{
+  --primary: var(--dark-violete);
+  --secondary: var(var(--off-white))
+}
+
 .card {
   width:50%;
-  background-color: var(--off-white);
+  background-color: var(--third);
   height: 12%;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-basis: 22%;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   justify-content: space-between;
   border-radius: 75px;
-  overflow:hidden
+  overflow:hidden;
 }
 .flex-wrapper{
   display: flex;
@@ -29,6 +41,7 @@ body{
   align-items: center;
   width: 100vw;
   margin: 1rem, auto;
+  background-color: var(--primary);
 }
 .card-img{
  width: auto;
@@ -38,7 +51,7 @@ body{
   filter: drop-shadow(8px 8px 8px black);
 }
 .desc{
-  width: auto;
+  width: 25%;
 }
 .flex_wrapper{
  background-color: var(--dark-violete);
@@ -46,5 +59,9 @@ body{
 }
 h1{
   text-align: center;
-
+color: var(--secondary);
+font-size: 7rem;
+}
+p{
+  font-size: 1.5rem;
 }
